# plimsoll-protocol

./: .gitignore  .vercelignore  LICENSE  README.md  SECURITY.md  proxy.Dockerfile  pyproject.toml  railway.toml
aegis/: __init__.py  decorator.py  escrow.py  firewall.py  verdict.py
aegis-rpc/: Cargo.toml  Dockerfile  docker-compose.yml
aegis-rpc/src/: config.rs  fee.rs  flashbots.rs  main.rs  router.rs  rpc.rs  simulator.rs  telemetry.rs  threat_feed.rs  types.rs
aegis/enclave/: __init__.py  tee.py  vault.py
aegis/engines/: __init__.py  asset_guard.py  capital_velocity.py  entropy_guard.py  evm_simulator.py  payload_quantizer.py  threat_feed.py  trajectory_hash.py
aegis/proxy/: __init__.py  interceptor.py
aegis/vault/: __init__.py  rpc_proxy.py  smart_vault.py
contracts/: foundry.toml
contracts/bitcoin/: Cargo.toml
contracts/bitcoin/src/: lib.rs  taproot_vault.rs
contracts/script/: Deploy.s.sol
contracts/solana/: Anchor.toml  Cargo.toml
contracts/solana/programs/aegis-vault/: Cargo.toml
contracts/solana/programs/aegis-vault/src/: lib.rs
contracts/solana/programs/plimsoll-vault/: Cargo.toml
contracts/solana/programs/plimsoll-vault/src/: lib.rs
contracts/solana/tests/: aegis-vault.ts  plimsoll-vault.ts
contracts/src/: AegisAttestation.sol  AegisEASAdapter.sol  AegisVault.sol  PlimsollAttestation.sol  PlimsollEASAdapter.sol  PlimsollVault.sol
contracts/src/modules/: DrawdownGuardModule.sol  IDrawdownGuardModule.sol  ITargetWhitelistModule.sol  IVelocityLimitModule.sol  TargetWhitelistModule.sol  VelocityLimitModule.sol
contracts/test/: AegisAttestation.t.sol  AegisEASAdapter.t.sol  AegisVault.t.sol  DrawdownGuardModule.t.sol  PlimsollAttestation.t.sol  PlimsollEASAdapter.t.sol  PlimsollVault.t.sol  TargetWhitelistModule.t.sol  VelocityLimitModule.t.sol
dapp/: package-lock.json  package.json  tailwind.config.ts
dapp/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dapp/src/components/: DeployVault.tsx  DepositWithdraw.tsx  EmergencyPanel.tsx  Header.tsx  ModuleStatus.tsx  QuickDeploy.tsx  SessionKeyManager.tsx  VaultDashboard.tsx
dapp/src/hooks/: useFactory.ts  useVault.ts
dapp/src/lib/: contracts.ts  wagmi.ts
demo/: _injection_lab.py  live_agent.py  scare_campaign.py  unprotected_agent.py
deploy/nitro/: kms_bootstrap.py  vsock_server.py
deploy/nitro/terraform/: main.tf  outputs.tf  variables.tf
indexer/: Cargo.toml
indexer/src/: evm_listener.rs  main.rs  processor.rs  schema.rs  solana_listener.rs
plimsoll/: __init__.py  decorator.py  escrow.py  firewall.py  intent.py  verdict.py
plimsoll-rpc/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
plimsoll-rpc/src/: config.rs  fee.rs  flashbots.rs  http_proxy.rs  inspector.rs  main.rs  router.rs  rpc.rs  sanitizer.rs  simulator.rs  svm_simulator.rs  telemetry.rs  threat_feed.rs  types.rs  utxo_guard.rs
plimsoll/cli/: __init__.py  init_cmd.py  main.py  up_cmd.py
plimsoll/enclave/: __init__.py  tee.py  vault.py
plimsoll/engines/: __init__.py  asset_guard.py  capital_velocity.py  entropy_guard.py  evm_simulator.py  payload_quantizer.py  threat_feed.py  trajectory_hash.py
plimsoll/integrations/: __init__.py  automaton.py  eliza.py  langchain.py  openclaw.py
plimsoll/oracles/: __init__.py  price_feed.py
plimsoll/proxy/: __init__.py  http_proxy.py  interceptor.py  vault_config.py
plimsoll/vault/: __init__.py  rpc_proxy.py  smart_vault.py
tests/: test_asset_guard.py  test_capital_velocity.py  test_cli.py  test_decorator.py  test_entropy_guard.py  test_escrow.py  test_evm_simulator.py  test_firewall.py  test_god_tier.py  test_http_proxy.py  test_integration_automaton.py  test_integration_eliza.py  test_integration_langchain.py  test_integration_openclaw.py  test_intent.py  test_jitter.py  test_kms_bootstrap.py  test_oracles.py  test_payload_quantizer.py  test_tee_enclave.py  test_threat_feed.py  test_trajectory_hash.py  test_vault.py  test_vault_sdk.py  test_vault_security.py  test_zero_days.py  test_zero_days_v101.py  test_zero_days_v102.py  test_zero_days_v103.py  test_zero_days_v104.py
