[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-protocol"
version = "0.1.0"
description = "Deterministic circuit breaker for autonomous AI agents. The financial seatbelt for the machine economy."
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Aegis Protocol" },
]
keywords = ["ai-agents", "circuit-breaker", "web3", "defi", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
proxy = [
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]
demo = [
    "openai>=1.0.0",
    "web3>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
