[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plimsoll-protocol"
version = "2.0.0"
description = "Deterministic circuit breaker for autonomous AI agents. The financial seatbelt for the machine economy."
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Plimsoll Protocol" },
]
keywords = ["ai-agents", "circuit-breaker", "web3", "defi", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
proxy = [
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]
demo = [
    "openai>=1.0.0",
    "web3>=6.0.0",
]
automaton = [
    "automaton>=0.1.0",
]
openclaw = [
    "openclaw>=0.1.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
eliza = [
    "eliza-framework>=0.1.0",
]
oracles = [
    "httpx>=0.27.0",
]

[project.scripts]
plimsoll = "plimsoll.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["plimsoll"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
