[package]
name = "plimsoll-rpc"
version = "2.0.0"
edition = "2021"
description = "Plimsoll RPC Proxy — Pre-execution simulation, MEV shielding, and physics enforcement for AI agent transactions"
license = "MIT"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"

# EVM simulation
revm = { version = "17", features = ["std", "serde-json"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-provider = { version = "0.5", optional = true }

# Ethereum JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = { version = "2", features = ["rustls"] }

# MEV protection
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Fix derive_more feature for alloy-eip7702 compatibility
derive_more = { version = "1.0.0", features = ["display", "from"] }

# Concurrency
lazy_static = "1.4"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"
chrono = "0.4"

[features]
default = []
flashbots = []
