[package]
name = "plimsoll-vault"
version = "2.0.0"
description = "Plimsoll Vault — Solana Anchor Program with PDA-gated agent execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "plimsoll_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
